--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
+elasticsearch:
+  image: elasticsearch:latest
+  command: elasticsearch -Des.network.host=0.0.0.0
+  ports:
+    - "9200:9200"
+    - "9300:9300"
+
 kibana:
-  container_name: KibanaSense
-#  image: kibana:4.5
   build: .
   ports:
-   - 5601:5601
-  net: "host"
-  restart: always
-  environment:
-   - ELASTICSEARCH_URL=http://192.168.99.100:32769
-
+    - "5601:5601"
+  links:
+    - elasticsearch
