--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
 elasticsearch:
-  image: elasticsearch:latest
+  container_name: Elasticsearch
+  build: elasticsearch/
   command: elasticsearch -Des.network.host=0.0.0.0
   ports:
     - "9200:9200"
     - "9300:9300"
 
 kibana:
-  build: .
+  container_name: KibanaSense
+  build: kibana/
+  volumes:
+   - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml  
   ports:
-    - "5601:5601"
+   - 5601:5601
   links:
     - elasticsearch
