--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
 elasticsearch:
-  container_name: Elasticsearch
+  container_name: elasticsearch
   build: elasticsearch/
   command: elasticsearch -Des.network.host=0.0.0.0
   ports:
     - "9200:9200"
     - "9300:9300"
-
+  volumes:
+    - ./elasticsearch/data:/usr/share/elasticsearch/data
 kibana:
   container_name: KibanaSense
   build: kibana/
   volumes:
-   - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml  
+    - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml  
   ports:
-   - 5601:5601
+    - "5601:5601"
   links:
     - elasticsearch
+  environment:
+    - ELASTICSEARCH_URL=http://elasticsearch:9200
